# hermes-scripts

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  PROJECT_MANAGEMENT.md  README.md  backup-diario.py  bump-and-pr.sh  feeds.json  generate-issue-body.py  hermes_common.py  monitor-ram-mexico.py  polymarket-diario.py  post-merge.sh  pyproject.toml  reporte-uso-hermes.py  resumen-noticias-diario.py  resumen-rayados-diario.py  ruff.toml  setup.sh  update-external-skills.sh
.githooks/: pre-push
.github/: CODEOWNERS  CONTRIBUTING.md  HERMES_DEV_FLOW.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  bug.md  config.yml  feature-request.yml  feature.md
.github/workflows/: ci.yml  codeql.yml  project-automation.yml  release.yml
.hermes/plans/: 2026-07-10_ejecutar-estandarizacion.md  2026-07-10_estandarizacion-scripts.md  2026-07-10_tests-uv-ruff.md  2026-07-10_tier1-2-ejecutar.md  2026-07-10_tier1-2-escalabilidad.md
src/: generate_issue_body.py
src/hermes_common/: __init__.py  common.py
tests/: test_backup_diario.py  test_hermes_common.py  test_monitor_ram.py  test_monitor_ram_mexico.py  test_polymarket_diario.py  test_reporte_uso_hermes.py  test_resumen_noticias.py  test_resumen_rayados.py
