[project]
name = "resumen-noticias-diario"
version = "0.3.22"
description = "Script de resumen diario de noticias multi-región"
requires-python = ">=3.11"
dependencies = [
    "requests",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest",
    "ruff",
    "mypy",
    "bandit",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_files = ["pyproject.toml:version"]
changelog_file = "CHANGELOG.md"
update_changelog_on_bump = true

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true

[tool.bandit]
exclude_dirs = ["tests", ".venv", ".git"]
skips = ["B602", "B604"]
